--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,92 +3,76 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Themed Gallery Page</title>
+        <title>Kam's Portfolio Gallery Page</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-<body>
-
-    <div class="hero">
-        <div class="hero-content">
-            <h1>Delicious Desserts</h1>
+    <body>
+        <div id="grid-layout">
+            <div id="header">
+                <h1>
+                    <span id="KAM">KAM'S</span>
+                    <span id="portfolio">Digital Art Portfolio</span>
+                </h1>
+            </div>
+            <div id="sidebar">
+                <h2>SKILLS</h2>
+                <h3>+ Photography</h3>
+                <ul>
+                    <li>Editing</li>
+                    <li>Photoshop</li>
+                    <li>Lightroom</li>
+                    <li>Ad Campaigns</li>
+                </ul>
+                <h3>+ Graphic Design</h3>
+                <ul>
+                    <li>Logo Design</li>
+                    <li>Branding</li>
+                    <li>Character Design</li>
+                    <li>Illustration</li>
+                    <li>Concept Ideation</li>
+                </ul>
+                <h3>+ Web Development</h3>
+                <ul>
+                    <li>Wordpress</li>
+                    <li>Wix</li>
+                    <!-- <li>SEO Optimization</li> -->
+                    <!-- <li>QA</li> -->
+                    <li>Coding</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <!-- <li>JavaScript</li> -->
+                </ul>
+                <h3>+ Social Media</h3>
+                <ul>
+                    <li>Video & Photo Content</li>
+                    <li>Copywriting</li>
+                </ul>
+            </div>
+            <div id="layout">
+                <h1>My Top Graphics</h1>
+                <!-- <p>
+                    Enjoy the gallery.
+                </p> -->
+                <div class="horizontal-masonry-gallery">
+                    <img 
+                        src="images/character_design_turnaround.jpg" 
+                        alt="coffee"
+                    >
+                    <img src="images/character_design_ad.jpg" alt="character">
+                    <img src="images/mj-creative-portrait.jpg" alt="character">
+                    <img src="images/national_parks_poster.jpg" alt="natl park">
+                    <img src="images/lovi_logo.jpg" alt="lovi logo">
+                    <img src="images/web-ad.jpg" alt="candle ad">
+                    <img src="images/robot-collage.jpg" alt="robot">
+                    <img src="images/bathbw-ad1.jpg" alt="bbw ad 1">
+                    <img src="images/bathbw-ad2.jpg" alt="bbw ad 2">
+                    <img src="images/bathbw-ad3.jpg" alt="bbw ad 3">
+                    <img src="images/arabian-matte-paint.jpg" alt="matte paint">
+                    <img src="images/race-ready.jpg" alt="race photobomb">
+                </div>
+                <div id="footer">Copyright &copy 2024 KAM MUDD</div>
+            </div>
+            </div>
         </div>
-    </div>
-        <h1>
-        <div class="image-grid">
-            <div class="image-item">
-                <img 
-                    src="anthony-espinosa-6iqpLKqeaE0-unsplash.jpg"
-                    alt="layered tiramisu"
-                >    
-            </div>
-            <div class="image-item">
-                <img 
-                    src="shania-pinnata-Ikd6YJVofEE-unsplash.jpg"
-                    alt="chocolate raspberry fudge"
-                >    
-            </div>
-            <div class="image-item">
-                <img 
-                    src="monika-grabkowska-EbRBhZ-I_p8-unsplash.jpg"
-                    alt="blueberry cheesecake"
-                >    
-            </div>
-            <div class="image-item">
-                <img 
-                    src="chris-c-hzC-esrwd3k-unsplash.jpg"
-                    alt="green frosting vanilla cupcakes"
-                >
-            </div>
-            <div class="image-item">
-                <img 
-                    src="heather-barnes-xatIo9Ksfb0-unsplash.jpg"
-                    alt="dark chocolate filled chocolate 
-                        peanut butter cupcakes"
-                >        
-            </div>
-            <div class="image-item">
-                <img 
-                    src="kobby-mendez-q54Oxq44MZs-unsplash.jpg"
-                    alt="three chocolate glazed spinkled doughnuts"
-                >    
-            </div>
-            <div class="image-item">
-                <img 
-                    src="oliver-timm-haarmann-p6OLZPnq810-unsplash.jpg" 
-                    alt="two fruit topped pastry cookies"
-                >    
-            </div>
-            <div class="image-item">
-                <img 
-                    src="pushpak-dsilva-2UeBOL7UD34-unsplash.jpg"
-                    alt="chocolate brownies with chocolate syrup"
-                >    
-            </div>
-            <div class="image-item">
-                <img 
-                    src="dessy-dimcheva-zyMJwFBg8u8-unsplash.jpg"
-                    alt="three chocolate cupcakes withh vanilla frosting
-                        and a cherry"
-                >        
-            </div>
-            <div class="image-item">
-                <img 
-                    src="leannk-NH2S3zVPMaE-unsplash.jpg"
-                    alt="plain glazed doughnuts"
-                >        
-            </div>
-            <div class="image-item">
-                <img 
-                    src="emile-mbunzama-cLpdEA23Z44-unsplash.jpg"
-                    alt="multilayer chocolate and vanilla dessert 
-                        in glass"
-                >        
-            </div>
-            <div class="image-item">
-                <img 
-                    src="shayna-douglas-Cos4OXJLs14-unsplash.jpg"
-                    alt="three unique doughnuts"
-                >    
-            </div>
     </body>
 </html>
