--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -1,78 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kam's Portfolio Gallery Page</title>
-        <link href="css/style.css" rel="stylesheet">
+        <title>Photos</title>
+        <link href="css/photos-style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <div id="grid-layout">
-            <div id="header">
-                <h1>
-                    <span id="KAM">KAM'S</span>
-                    <span id="portfolio">Digital Art Portfolio</span>
-                </h1>
-            </div>
-            <div id="sidebar">
-                <h2>SKILLS</h2>
-                <h3>+ Photography</h3>
-                <ul>
-                    <li>Editing</li>
-                    <li>Photoshop</li>
-                    <li>Lightroom</li>
-                    <li>Ad Campaigns</li>
-                </ul>
-                <h3>+ Graphic Design</h3>
-                <ul>
-                    <li>Logo Design</li>
-                    <li>Branding</li>
-                    <li>Character Design</li>
-                    <li>Illustration</li>
-                    <li>Concept Ideation</li>
-                </ul>
-                <h3>+ Web Development</h3>
-                <ul>
-                    <li>Wordpress</li>
-                    <li>Wix</li>
-                    <!-- <li>SEO Optimization</li> -->
-                    <!-- <li>QA</li> -->
-                    <li>Coding</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <!-- <li>JavaScript</li> -->
-                </ul>
-                <h3>+ Social Media</h3>
-                <ul>
-                    <li>Video & Photo Content</li>
-                    <li>Copywriting</li>
-                </ul>
-            </div>
-            <div id="layout">
-                <h1>My Top Graphics</h1>
-                <!-- <p>
-                    Enjoy the gallery.
-                </p> -->
-                <div class="horizontal-masonry-gallery">
-                    <img 
-                        src="images/character_design_turnaround.jpg" 
-                        alt="coffee"
-                    >
-                    <img src="images/character_design_ad.jpg" alt="character">
-                    <img src="images/mj-creative-portrait.jpg" alt="character">
-                    <img src="images/national_parks_poster.jpg" alt="natl park">
-                    <img src="images/lovi_logo.jpg" alt="lovi logo">
-                    <img src="images/web-ad.jpg" alt="candle ad">
-                    <img src="images/robot-collage.jpg" alt="robot">
-                    <img src="images/bathbw-ad1.jpg" alt="bbw ad 1">
-                    <img src="images/bathbw-ad2.jpg" alt="bbw ad 2">
-                    <img src="images/bathbw-ad3.jpg" alt="bbw ad 3">
-                    <img src="images/arabian-matte-paint.jpg" alt="matte paint">
-                    <img src="images/race-ready.jpg" alt="race photobomb">
-                </div>
-                <div id="footer">Copyright &copy 2024 KAM MUDD</div>
-            </div>
-            </div>
+        <h2>
+            Photos
+        </h2>
+        <a href="index.html">
+            <h4 class="buttons">
+                Home
+            </h4>
+        <div class="photos-gallery">
+            <img id="egg"
+                src="images/Photos/01Eggs.JPG"
+                alt="Eggs"
+            >
+            <img id="birbs-1"
+                src="images/Photos/02birbs1.JPG"
+                alt="Baby Birbs 1-1"
+            >
+            <img id="birbs-2"
+            src="images/Photos/02birbs2.JPG"
+            alt="Baby Birbs 1-2"
+            >
         </div>
     </body>
 </html>
