--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,30 +3,38 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Client NavBar 1</title>
+        <title>Client Navbars</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="navbar-top">
-            <a href="index.html">BOGO 50% off on select costumes
-                 - Use code: BOGO50
-            </a>
+            <div class="content-column">
+                <a href="index.html">
+                    <p>
+                        BOGO 50% off on select costumes - Use code: BOGO50
+                    </p>
+                </a>
+            </div>
+            <div class="content2">
+                    <p>
+                        Tailored Spooks
+                    </p>
+                    <a href="index.html">Job</a>
+                    <a href="index.html">Blogs</a>
+                    <a href="index.html">Orders</a>
+                    <a href="index.html">Account</a>
+                <a href="index.html" class="cta-button">Sign in</a>
+            </div>
+            <div id="navbar-bottom">
+                <div class="content-column">
+                    <a href="index.html">New Arrivals</a>
+                    <a href="index.html">Costumes</a>
+                    <a href="index.html">Accessories</a>
+                    <a href="index.html">Decorations</a>
+                    <a href="index.html">Animatronics</a>
+                    <a href="index.html">On Sale</a>
+                </div>
+            </div>
         </div>
-        <div id="navbar-middle">
-            <a href="index.html" id="logo-link-3">Tailored Spooks</a>
-            <a href="index.html">Jobs</a>
-            <a href="index.html">Blog</a>
-            <a href="index.html">Orders</a>
-            <a href="index.html">Account</a>
-            <a href="index.html" id="cta-button">Sign In</a>
-        </div>    
-        <div id="navbar-bottom">
-            <a href="index.html">New Arrivals</a>
-            <a href="index.html">Costumes</a>
-            <a href="index.html">Accessories</a>
-            <a href="index.html">Decorations</a>
-            <a href="index.html">Animatronics</a>
-            <a href="index.html">On Sale</a>
-        </div>    
     </body>
-    </html>
+</html>
