--- a/projects/dropdown-project/enrico.html
+++ b/projects/dropdown-project/enrico.html
@@ -21,6 +21,20 @@
             <a href="#">Donate</a>
         </div> 
 
+          <!-- Main page content start -->
+
+          <div class="background-image">
+            <div class="centered-layout">
+                <img class="image" src="images/frog.gif" alt="Smart nina"> 
+                <h2 class="name">Binyah Binyah Poliiwog</h2>
+                <p class="bio">
+                    Binyah Binyah is a playful, clumsy, funny polliwog. He croaks and makes cooing and clicking noises. Binyah Binyah is a very good dancer, especially at breakdancing.
+                </p>
+            </div>
+        </div>
+
+        <!-- Main page content end -->
+
 
 
 
