--- a/projects/dropdown-project/nnedi.html
+++ b/projects/dropdown-project/nnedi.html
@@ -21,6 +21,21 @@
             <a href="#">Donate</a>
         </div> 
 
+        <!-- Main page content start -->
+
+        <div class="background-image">
+            <div class="centered-layout">
+                <img class="image" id="mermaid-img" src="images/nnedi mermaid.jpg" alt="Smart nina"> 
+                <h2 class="name">Nnedi</h2>
+                <p class="bio">
+                    Meet Nnedi a beautiful mermaid from Zimbabwe. If you decide to adopt Nnedi be prepared to not return home for 40 plus years with no memory!
+                </p>
+            </div>
+        </div>
+
+        <!-- Main page content end -->
+
+
 
 
 
