--- a/projects/dropdown-project/index.html
+++ b/projects/dropdown-project/index.html
@@ -10,21 +10,24 @@
         <div id="navbar">
             <a href="index.html" id="logo">AdoptMePLZ</a>
             <div class="dropdown-container">
-                <a href="index.html">Adopt</a>
+                <a class="main_a" href="index.html">Adopt</a>
                 <div class="dropdown-menu">
                     <a href="nina.html">Nina</a>
                     <a href="nnedi.html">Nnedi</a>
-                    <a href="enrico.html">Enrico</a>
+                    <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
-            <a href="#">Voulenteer</a>
-            <a href="#">Donate</a>
+            <a class="main_a href="#">Voulenteer</a>
+            <a class="main_a href="#">Donate</a>
         </div> 
 
         <!-- Hero code start -->
 
         <div id="hero">
             <div class="hero-content">
+                <video class="video-bg" autoplay muted loop>
+                    <source src="images/bunnyvid.mp4" type="video/mp4">
+                </video>
                 <h2>Feeling Lonely</h2>
                 <h4>A pet may be just right for you!</h4>
                 <!-- <div>
