--- a/projects/dropdown-project/nnedi.html
+++ b/projects/dropdown-project/nnedi.html
@@ -14,7 +14,7 @@
                 <div class="dropdown-menu">
                     <a href="nina.html">Nina</a>
                     <a href="nnedi.html">Nnedi</a>
-                    <a href="enrico.html">Enrico</a>
+                    <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
             <a href="#">Voulenteer</a>
@@ -25,7 +25,7 @@
 
         <div class="background-image">
             <div class="centered-layout">
-                <img class="image" id="mermaid-img" src="images/nnedi mermaid.jpg" alt="Smart nina"> 
+                <img class="image" id="mermaid-img" src="images/nnedi mermaid.jpg" alt="NNedi the mermaid"> 
                 <h2 class="name">Nnedi</h2>
                 <p class="bio">
                     Meet Nnedi a beautiful mermaid from Zimbabwe. If you decide to adopt Nnedi be prepared to not return home for 40 plus years with no memory!
