--- a/projects/dropdown-project/enrico.html
+++ b/projects/dropdown-project/enrico.html
@@ -25,7 +25,7 @@
 
           <div class="background-image">
             <div class="centered-layout">
-                <img class="image" src="images/frog.gif" alt="Smart nina"> 
+                <img class="image" id="frog-img" src="images/frog.gif" alt="Smart nina"> 
                 <h2 class="name">Binyah Binyah Poliiwog</h2>
                 <p class="bio">
                     Binyah Binyah is a playful, clumsy, funny polliwog. He croaks and makes cooing and clicking noises. Binyah Binyah is a very good dancer, especially at breakdancing.
