--- a/projects/dropdown-project/enrico.html
+++ b/projects/dropdown-project/enrico.html
@@ -13,7 +13,7 @@
                 <a href="index.html">Adopt</a>
                 <div class="dropdown-menu">
                     <a href="nina.html">Nina</a>
-                    <a href="nnedi.html">Nnedi</a>
+                    <a href="nnedi.html">Amiyah</a>
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
@@ -34,6 +34,9 @@
         </div>
 
         <!-- Main page content end -->
+        <div class="footer3">
+            <p>&copy; Copyright 2024 AdoptMePLZ coded by Nell Fonseca</p>
+        </div> 
 
 
 
