--- a/projects/dropdown-project/nina.html
+++ b/projects/dropdown-project/nina.html
@@ -13,7 +13,7 @@
                 <a href="index.html">Adopt</a>
                 <div class="dropdown-menu">
                     <a href="nina.html">Nina</a>
-                    <a href="nnedi.html">Nnedi</a>
+                    <a href="nnedi.html">Amiyah</a>
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
@@ -28,12 +28,19 @@
                 <img class="image" src="images/nina.jpg" alt="Smart nina"> 
                 <h2 class="name">Nina Angelica Fonseca</h2>
                 <p class="bio">
-                    Meet Nina one day she ate some alphabet soup and a maths book. Now she can help you with your Maths homework!
+                    Meet Nina one day she ate some alphabet 
+                    soup and a maths book. 
+                    Now she can help you with your math 
+                    homework and read you bedtime stories!
                 </p>
             </div>
         </div>
 
         <!-- Main page content end -->
+
+        <div class="footer3">
+            <p>&copy; Copyright 2024 AdoptMePLZ coded by Nell Fonseca</p>
+        </div> 
 
     </body>
 </html>
