--- a/projects/dropdown-project/nnedi.html
+++ b/projects/dropdown-project/nnedi.html
@@ -13,7 +13,7 @@
                 <a href="index.html">Adopt</a>
                 <div class="dropdown-menu">
                     <a href="nina.html">Nina</a>
-                    <a href="nnedi.html">Nnedi</a>
+                    <a href="nnedi.html">Amiyah</a>
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
@@ -25,10 +25,10 @@
 
         <div class="background-image">
             <div class="centered-layout">
-                <img class="image" id="mermaid-img" src="images/nnedi mermaid.jpg" alt="NNedi the mermaid"> 
-                <h2 class="name">Nnedi</h2>
+                <img class="image" id="mermaid-img" src="images/amiyahmermaid.jpg" alt="NNedi the mermaid"> 
+                <h2 class="name">Amiyah</h2>
                 <p class="bio">
-                    Meet Nnedi a beautiful mermaid from Zimbabwe. If you decide to adopt Nnedi be prepared to not return home for 40 plus years with no memory!
+                    Meet Amiyah a beautiful mermaid from Zimbabwe. If you decide to adopt Amiyah be prepared to not return home for 40 plus years with no memory!
                 </p>
             </div>
         </div>
@@ -40,5 +40,8 @@
 
 
 
+        <div class="footer3">
+            <p>&copy; Copyright 2024 AdoptMePLZ coded by Nell Fonseca</p>
+        </div> 
     </body>
 </html>
