--- a/projects/dropdown-project/index.html
+++ b/projects/dropdown-project/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AdoptmePLZ</title>
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image" href="images/dog.jpg">
     </head>
     <body>
         <div id="navbar">
@@ -17,7 +19,7 @@
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
-            <a class="maina href="#">Voulenteer</a>
+            <a class="maina href="voulenteer.html">Voulenteer</a>
             <a class="maina href="#">Donate</a>
         </div> 
 
