voulenteer page done

--- a/projects/dropdown-project/index.html
+++ b/projects/dropdown-project/index.html
@@ -19,8 +19,8 @@
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
-            <a class="maina href="voulenteer.html">Voulenteer</a>
-            <a class="maina href="#">Donate</a>
+            <a class="maina" href="voulenteer.html">Volunteer</a>
+            <a class="maina" href="donate.html">Donate</a>
         </div> 
 
         <!-- Hero code start -->
