--- a/projects/dropdown-project/nina.html
+++ b/projects/dropdown-project/nina.html
@@ -20,8 +20,8 @@
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
-            <a href="#">Voulenteer</a>
-            <a href="#">Donate</a>
+            <a href="voulenteer.html">Voulenteer</a>
+            <a href="donate.html">Donate</a>
         </div> 
 
         <!-- Main page content start -->
