--- a/projects/dropdown-project/nnedi.html
+++ b/projects/dropdown-project/nnedi.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AdoptmePLZ</title>
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image" href="images/dog.jpg">
     </head>
     <body>
         <div id="navbar">
@@ -17,8 +19,8 @@
                     <a href="enrico.html">Binyah Binyah Poliiwog</a>
                 </div>
             </div>     
-            <a href="#">Voulenteer</a>
-            <a href="#">Donate</a>
+            <a href="voulenteer.html">Voulenteer</a>
+            <a href="donate.html">Donate</a>
         </div> 
 
         <!-- Main page content start -->
