--- a/projects/dropdown-project/index.html
+++ b/projects/dropdown-project/index.html
@@ -25,17 +25,15 @@
 
         <!-- Hero code start -->
 
-        <div id="hero">
+        <div id="hero"> 
             <div class="hero-content">
                 <video class="video-bg" autoplay muted loop>
                     <source src="images/bunnyvid.mp4" type="video/mp4">
                 </video>
-                <h2>AdoptMePLZ</h2>
-                <h4>Where happiness has Fur and Feathers!</h4>
-                <!-- <div>
-                    <a href="#">Wish</a>
-                    <a href="#">Dream</a>
-                </div> -->
+                <div class="movehero">
+                    <h2>AdoptMePLZ</h2>
+                    <h4>Where happiness has Fur and Feathers!</h4>
+                </div>
             </div>
         </div>
 
