--- a/projects/dropdown-project/index.html
+++ b/projects/dropdown-project/index.html
@@ -61,7 +61,7 @@
                     </div>
 
                     <!-- Second flex box start  -->
-                    <div class="flex-animals">
+                    <div class="flex-animals" id="owlboi">
                         <div class="image-animals">
                             <img id="ladydog" src="images/bigboiowl.jpeg" alt="people with animals">
                         </div>
