Ignore this push

--- a/projects/dropdown-project/index.html
+++ b/projects/dropdown-project/index.html
@@ -24,18 +24,25 @@
         </div> 
 
         <!-- Hero code start -->
+        <div id="hero">
+            <video class="video-bg" autoplay muted loop>
+                <source src="images/bunnyvid.mp4" type="video/mp4">
+            </video>
 
-        <div id="hero"> 
             <div class="hero-content">
-                <video class="video-bg" autoplay muted loop>
-                    <source src="images/bunnyvid.mp4" type="video/mp4">
-                </video>
                 <div class="movehero">
                     <h2>AdoptMePLZ</h2>
                     <h4>Where happiness has Fur and Feathers!</h4>
                 </div>
+                <div>
+                    <a href="#">Wish</a>
+                    <a href="#">Dream</a>
+                </div>
             </div>
         </div>
+
+
+       
 
         <!-- Hero code end -->
 
