--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -5,49 +5,63 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Final Eval</title>
         <link href="css/style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap" 
+            rel="stylesheet"
+        >
     </head>
     <body>
-        <div class="header">
-            <div class="navbar">
-                <a href="index.html">Hiya</a>
-                <a href="#">Superbowl</a>
-                <a href="#">Teams</a>
-                <a href="Information.html">Information</a>
-                <a href="#" class="cta-button">Cout me in</a>
-            </div>
-        </div>
-            <div id="card6" class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <h2>In for the count</h2>
-                    <div class="card-content">
-                        <p>
-                           I can make it Please text 
-                           555.123.4567 for when you will be ariving!
-                        </p>
-                        <a href="#">Count me in</a>
-                    </div>
+        <div class="centered-column">
+            <h4>John and Jane Smith's</h4>
+            <h1>Super Bowl LVIII</h1>
+            <h3>Extravaganza Party</h3>
+        </div> 
+        <div class="center-column">
+            <div class="side-by-side">
+                <div class="image-container">
+                    <img id="img1"
+                        src="images/lions.png"
+                        alt="lions"
+                    >
+                    <h4>Detroit Lions</h4>
+                    <h2 id="vs">VS</h2>
+                    <img id="img2" 
+                        src="images/eagles.png"
+                        alt="eagles"    
+                    >
+                    <h4>Philadelphia Eagles</h4>
                 </div>
             </div>
         </div>
-            <div id="card6" class="card">
-                <div class="card-front"></div>
-                <div class="card-back">
-                    <h2>Out for the count</h2>
-                    <div class="card-content">
-                        <p>
-                            "unfotently I cant make it"
-                            if you cant make it please call  555.123.4567
-                        </p>
-                        <a href="#">Count me out</a>
-                    </div>
-                </div>
+        <div class="name">
+            <h4>Detroit Lions</h4>
+            <h4>Philadelphia Eagles</h4>
+        </div>
+        <div class="centered-column info">
+            <h2>Join us for the Ultimate Super Bowl Sunday Bash!</h2>
+            <p>
+                We'll have hot food, cold drinks, and big screens; all that's
+                missing is you!
+            </p>
+            <p>
+                The party will be at 1234 Main St, Anytown, USA
+            </p>
+            <p>
+                Sunday, Feb 11 2024 @ 6pm
+            </p> 
+        </div>  
+        <div class="buttons">
+            <div class="button1">
+                <h5>I can make it!</h5>
+            </div>   
+            <div class="button2">
+                <h5>I can't make it</h5>
             </div>
         </div>
-        <div id="hero">
-            <h2>Superbowl!</h2>
-            <h4>Time to watch the game Bro!</h4>
-            <a href="count-me-in.html">Come on!</a>
-        </div>
+        <p>
+            Questions? Call 555.123.4567
+        </p>   
     </body>
 </html>
