--- a/test-for-students/index.html
+++ b/test-for-students/index.html
@@ -3,65 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Final Eval</title>
+        <title>DROPDOWN MENU SITE</title>
         <link href="css/style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link 
-            href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap" 
-            rel="stylesheet"
-        >
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="css/page9.css" rel="stylesheet" data-meal-prep>
     </head>
-    <body>
-        <div class="centered-column">
-            <h4>John and Jane Smith's</h4>
-            <h1>Super Bowl LVIII</h1>
-            <h3>Extravaganza Party</h3>
-        </div> 
-        <div class="center-column">
-            <div class="side-by-side">
-                <div class="image-container">
-                    <img id="img1"
-                        src="images/lions.png"
-                        alt="lions"
+    <body id="background-m">
+        <div id="navbar">
+            <a id="logo" href="index.html">AdoptMePlz</a>
+            <div class="dropdown-container">
+                <a href="index.html">ADOPT<i class="fa-solid fa-chevron-down"></i></a>
+                <div class="dropdown-menu">
+                    <a href="alphonzo.html">Alphonzo</a>
+                    <a href="macie.html">Macie</a>
+                    <a href="clenton.html">Clenton</a>
+                </div>
+            </div>
+            <div>
+                <a href="#">VOLUNTEER</a>
+            </div>
+            <div>
+                <a href="#">DONATE</a>
+            </div>
+        </div>
+        <div id="background-image1">
+            <div class="macie">
+                <div id="macie-card" class="card-1-container">
+                    <h1>Macie</h1>
+                    <img
+                        src="images/macie.jpg"
+                        alt="This is an image of macie."
                     >
-                    <h4>Detroit Lions</h4>
-                    <h2 id="vs">VS</h2>
-                    <img id="img2" 
-                        src="images/eagles.png"
-                        alt="eagles"    
-                    >
-                    <h4>Philadelphia Eagles</h4>
+                    <p> 
+                        Hi, I'm Macie! I'm a playful and curious puppy who 
+                        loves chasing my tail, playing fetch, and exploring 
+                        outside. I adore snuggling up for naps and am always 
+                        excited to learn new tricks, especially for treats! 
+                        I'm friendly and full of love, ready to bring joy and 
+                        wagging tails to my forever family. Let's have fun and 
+                        make great memories together!
+                        Love,
+                        Macie 🐾
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="name">
-            <h4>Detroit Lions</h4>
-            <h4>Philadelphia Eagles</h4>
-        </div>
-        <div class="centered-column info">
-            <h2>Join us for the Ultimate Super Bowl Sunday Bash!</h2>
-            <p>
-                We'll have hot food, cold drinks, and big screens; all that's
-                missing is you!
-            </p>
-            <p>
-                The party will be at 1234 Main St, Anytown, USA
-            </p>
-            <p>
-                Sunday, Feb 11 2024 @ 6pm
-            </p> 
-        </div>  
-        <div class="buttons">
-            <div class="button1">
-                <h5>I can make it!</h5>
-            </div>   
-            <div class="button2">
-                <h5>I can't make it</h5>
-            </div>
-        </div>
-        <p>
-            Questions? Call 555.123.4567
-        </p>   
     </body>
 </html>
